[gd_scene load_steps=94 format=2]

[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_000.png" type="Texture" id=1]
[ext_resource path="res://Scripts/WraithOrange.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_011.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_009.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_007.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_005.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_006.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_008.png" type="Texture" id=8]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_004.png" type="Texture" id=9]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_000.png" type="Texture" id=10]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_001.png" type="Texture" id=11]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_002.png" type="Texture" id=12]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_003.png" type="Texture" id=13]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_010.png" type="Texture" id=14]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_003.png" type="Texture" id=15]
[ext_resource path="res://Enemies/Wraith_Orange/Idle/Wraith_02_Idle_011.png" type="Texture" id=16]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_005.png" type="Texture" id=17]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_001.png" type="Texture" id=18]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_006.png" type="Texture" id=19]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_004.png" type="Texture" id=20]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_014.png" type="Texture" id=21]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_015.png" type="Texture" id=22]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_007.png" type="Texture" id=23]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_011.png" type="Texture" id=24]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_002.png" type="Texture" id=25]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_000.png" type="Texture" id=26]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_000.png" type="Texture" id=27]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_009.png" type="Texture" id=28]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_001.png" type="Texture" id=29]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_015.png" type="Texture" id=30]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_002.png" type="Texture" id=31]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_004.png" type="Texture" id=32]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_008.png" type="Texture" id=33]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_006.png" type="Texture" id=34]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_009.png" type="Texture" id=35]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_009.png" type="Texture" id=36]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_012.png" type="Texture" id=37]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_016.png" type="Texture" id=38]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_005.png" type="Texture" id=39]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_002.png" type="Texture" id=40]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_011.png" type="Texture" id=41]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_003.png" type="Texture" id=42]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_005.png" type="Texture" id=43]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_007.png" type="Texture" id=44]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_006.png" type="Texture" id=45]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_010.png" type="Texture" id=46]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_004.png" type="Texture" id=47]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_008.png" type="Texture" id=48]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_017.png" type="Texture" id=49]
[ext_resource path="res://Enemies/Wraith_Orange/Attacking/Wraith_02_Attack_010.png" type="Texture" id=50]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_007.png" type="Texture" id=51]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_008.png" type="Texture" id=52]
[ext_resource path="res://Enemies/Wraith_Orange/Walking/Wraith_02_Moving Forward_010.png" type="Texture" id=53]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_013.png" type="Texture" id=54]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_003.png" type="Texture" id=55]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_009.png" type="Texture" id=56]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_002.png" type="Texture" id=57]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_003.png" type="Texture" id=58]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_001.png" type="Texture" id=59]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_016.png" type="Texture" id=60]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_012.png" type="Texture" id=61]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_017.png" type="Texture" id=62]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_008.png" type="Texture" id=63]
[ext_resource path="res://Enemies/Wraith_Orange/Casting Spells/Wraith_02_Casting Spells_000.png" type="Texture" id=64]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_001.png" type="Texture" id=65]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_007.png" type="Texture" id=66]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_013.png" type="Texture" id=67]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_010.png" type="Texture" id=68]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_014.png" type="Texture" id=69]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_004.png" type="Texture" id=70]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_006.png" type="Texture" id=71]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_005.png" type="Texture" id=72]
[ext_resource path="res://Enemies/Wraith_Orange/Taunt/Wraith_02_Taunt_011.png" type="Texture" id=73]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_006.png" type="Texture" id=74]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_013.png" type="Texture" id=75]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_000.png" type="Texture" id=76]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_012.png" type="Texture" id=77]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_001.png" type="Texture" id=78]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_014.png" type="Texture" id=79]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_011.png" type="Texture" id=80]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_007.png" type="Texture" id=81]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_005.png" type="Texture" id=82]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_008.png" type="Texture" id=83]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_004.png" type="Texture" id=84]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_009.png" type="Texture" id=85]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_010.png" type="Texture" id=86]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_003.png" type="Texture" id=87]
[ext_resource path="res://Enemies/Wraith_Orange/Dying/Wraith_02_Dying_002.png" type="Texture" id=88]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 17.5 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 42 ), ExtResource( 32 ), ExtResource( 43 ), ExtResource( 34 ), ExtResource( 44 ), ExtResource( 48 ), ExtResource( 36 ), ExtResource( 50 ), ExtResource( 41 ) ],
"loop": true,
"name": "Attack",
"speed": 11.0
}, {
"frames": [ ExtResource( 76 ), ExtResource( 78 ), ExtResource( 88 ), ExtResource( 87 ), ExtResource( 84 ), ExtResource( 82 ), ExtResource( 74 ), ExtResource( 81 ), ExtResource( 83 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 80 ), ExtResource( 77 ), ExtResource( 75 ), ExtResource( 79 ) ],
"loop": true,
"name": "Dying",
"speed": 22.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 59 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 20 ), ExtResource( 39 ), ExtResource( 45 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 35 ), ExtResource( 46 ), ExtResource( 24 ), ExtResource( 37 ), ExtResource( 54 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 38 ), ExtResource( 49 ) ],
"loop": true,
"name": "SpellCast",
"speed": 11.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 65 ), ExtResource( 31 ), ExtResource( 55 ), ExtResource( 70 ), ExtResource( 72 ), ExtResource( 71 ), ExtResource( 66 ), ExtResource( 63 ), ExtResource( 56 ), ExtResource( 68 ), ExtResource( 73 ), ExtResource( 61 ), ExtResource( 67 ), ExtResource( 69 ), ExtResource( 30 ), ExtResource( 60 ), ExtResource( 62 ) ],
"loop": true,
"name": "Taunt",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 18 ), ExtResource( 40 ), ExtResource( 13 ), ExtResource( 47 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 33 ), ExtResource( 28 ), ExtResource( 53 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walking",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 19 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=3]

[node name="WraithOrange" type="KinematicBody2D" groups=["Enemy", "Wraith"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2( -1, -13 )
shape = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.16, 0.16 )
frames = SubResource( 7 )
animation = "Dying"
frame = 14

[node name="WraithArea" type="Area2D" parent="." groups=["Wraith"]]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WraithArea"]
position = Vector2( -1, -13 )
shape = SubResource( 6 )

[node name="TerrainCheck" type="KinematicBody2D" parent="." groups=["TerrainCheck"]]
position = Vector2( 30, 20 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainCheck"]
shape = SubResource( 4 )

[node name="TerrainArea" type="Area2D" parent="TerrainCheck"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainCheck/TerrainArea"]
shape = SubResource( 3 )

[node name="TerrainCheck2" type="KinematicBody2D" parent="." groups=["TerrainCheck2"]]
position = Vector2( -30, 20 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainCheck2"]
shape = SubResource( 4 )

[node name="TerrainArea2" type="Area2D" parent="TerrainCheck2"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainCheck2/TerrainArea2"]
shape = SubResource( 3 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="body_entered" from="WraithArea" to="." method="_on_WraithArea_body_entered"]
[connection signal="body_entered" from="TerrainCheck/TerrainArea" to="." method="_on_TerrainArea_body_entered"]
[connection signal="body_exited" from="TerrainCheck/TerrainArea" to="." method="_on_TerrainArea_body_exited"]
[connection signal="body_entered" from="TerrainCheck2/TerrainArea2" to="." method="_on_TerrainArea2_body_entered"]
[connection signal="body_exited" from="TerrainCheck2/TerrainArea2" to="." method="_on_TerrainArea2_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
